salesforce-main/src/main/default/objects/Billing_Rule_Mapping__c/Billing_Rule_Mapping__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold mappings from BP tax rule and product tax rule to Salesforce Billing Tax Rule and Billing Rule.</description>
    <label>Billing Rule Mapping</label>
    <nameField>
        <label>Billing Rule Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Rule Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>