salesforce-main/src/main/default/objects/Billing_Rule_Mapping__c/fields/Account_Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Tax_Category__c</fullName>
    <description>Account tax category (BP tax rule) used in mapping.</description>
    <label>Account Tax Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Tax_Categories</valueSetName>
    </valueSet>
</CustomField>