salesforce-main/src/main/default/objects/Billing_Rule_Mapping__c/fields/Product_Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Tax_Category__c</fullName>
    <description>Product tax category used in mapping.</description>
    <label>Product Tax Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Tax_Categories</valueSetName>
    </valueSet>
</CustomField>