salesforce-main/src/main/default/objects/Billing_Rule_Mapping__c/fields/Tax_Rule__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Salesforce Billing Tax Rule selected based on Product Tax Rule and BP Tax Rule.</description>
    <label>Tax Rule</label>
    <referenceTo>blng__TaxRule__c</referenceTo>
    <relationshipLabel>Billing Rule Mappings</relationshipLabel>
    <relationshipName>Billing_Rule_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>